加入登录注册的接口和完成登录成功之后用户名在页面显示用户信息保存在cookie中

--- a/src/html/component/right_bar.html
+++ b/src/html/component/right_bar.html
@@ -16,7 +16,7 @@
                                 你好！请<a href="./login.html" id="to_login">登录</a>|<a href="./register.html" id="to_reg">注册</a>
                             </p>
                             <p id="my_cnt_have_name" class="sidebar-my-inf hidden">
-                                你好！<span id="my_cnt_user_name"></span>, 请<a href="javascript:;" id="to_login">登录</a>
+                                你好！<span id="my_cnt_user_name"></span><a href="javascript:;" id="to_logout">退出</a>
                             </p>
                             <div id="sbar_my_shortcut" class="sidebar-my-oper">
                                 <p class="sidebar-my-order">
