--- a/src/html/component/index_header.html
+++ b/src/html/component/index_header.html
@@ -6,12 +6,16 @@
                 <div class="area-triangle"></div>
             </div>
             <ul class="top-nav-tool">
-                <li class="list-item hover-box sign"><a href="javascript:void(0)"><span>请登录</span></a>
+                <li class="list-item hover-box sign"><a href="javascript:void(0)"><span class="sign-text">请登录</span></a>
                     <!-- 鼠标移入出现的登录盒子 -->
                     <div class="sign-info-box">
                         <div class="top-nav-info clearfix">
                             <div class="top-inf-avater"></div>
                             <div class="top-pic-infs"><a href="./login.html">你好！[请登录]</a></div>
+                            <div class="top-pic-success hidden">
+                                欢迎&nbsp;&nbsp;&nbsp;&nbsp;<span class="success_username"></span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0)">退出</a>
+                            </div>
                         </div>
                         <p class="top-nav-list">
                             <span><a href="#">我的收藏</a></span>
