--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -47,6 +47,7 @@
     width: 360px;
     height: 50px;
     border-bottom: 1px solid #e0e0e0;
+    cursor: pointer;
     .tab-nav-item.active {
       color: #f10180;
     }
