--- a/src/scss/cars.scss
+++ b/src/scss/cars.scss
@@ -597,3 +597,151 @@
   padding: 0 2px;
   font-family: Arial !important;
 }
+.history-content {
+  .tabs-nav {
+    margin-bottom: 5px;
+    height: 34px;
+    border-bottom: 1px solid #d0d0d0;
+    overflow: hidden;
+    .tabs-title {
+      display: inline-block;
+      position: relative;
+      margin-right: 20px;
+      padding-right: 10px;
+      padding-left: 10px;
+      vertical-align: top;
+      color: #666;
+      line-height: 34px;
+      font-size: 14px;
+      cursor: pointer;
+      padding-top: 2px;
+      z-index: 2;
+      color: #333;
+      line-height: 30px;
+      border-bottom: 3px solid #f10180;
+    }
+  }
+  .tabs-content {
+    .goods {
+      padding-top: 25px;
+      .goods-container {
+        position: relative;
+        width: 924px;
+        margin: 0 auto;
+        .good-item {
+          width: 140px;
+          padding: 0 7px;
+          float: left;
+          .good-img {
+            display: inline-block;
+            padding-bottom: 8px;
+            height: 178px;
+          }
+          .good-title {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            margin-bottom: 6px;
+            font-weight: 400;
+            &:hover {
+              color: #333333;
+            }
+          }
+          .good-size {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            margin-bottom: 3px;
+          }
+          .good-operate {
+            position: relative;
+            z-index: 1;
+            height: 24px;
+            font-size: 16px;
+            .add_to_car {
+              float: right;
+              font-size: 12px;
+              border: 1px solid #ffbee0;
+              background-color: #fcedf2;
+              color: #e00078;
+              line-height: 24px;
+            }
+          }
+        }
+        .prev {
+          position: absolute;
+          left: -28px;
+          top: 20%;
+          right: auto;
+          background-image: url(//ccp.vipstatic.com/img/cart/te/4/commons/sprites-hash-29a8cdc6.png?741290b2);
+          background-position: -311px -398px;
+          width: 28px;
+          height: 55px;
+          &:hover {
+            background-position: -407px -398px;
+          }
+        }
+        .next {
+          position: absolute;
+          top: 20%;
+          right: -28px;
+          left: auto;
+          background-image: url(//ccp.vipstatic.com/img/cart/te/4/commons/sprites-hash-29a8cdc6.png?741290b2);
+          background-position: -471px -398px;
+          width: 28px;
+          height: 55px;
+          &:hover {
+            background-position: -503px -398px;
+          }
+        }
+      }
+    }
+  }
+}
+.c-promises {
+  margin: 80px 0 80px;
+  .promises-item {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    padding: 25px 18px;
+    width: 266px;
+    height: 91px;
+    float: left;
+    .promises-pic {
+      background-image: url(//ccp.vipstatic.com/img/cart/te/4/commons/sprites-hash-29a8cdc6.png?741290b2);
+      background-position: -306px 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 302px;
+      height: 141px;
+    }
+    .promises-title {
+      color: #a2c14e;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      font-size: 18px;
+      font-weight: 400;
+      border-bottom: 1px solid #d7d5d5;
+    }
+  }
+  .return-promises-item {
+    margin-right: 27px;
+    margin-left: 27px;
+    .promises-pic {
+      background-image: url(//ccp.vipstatic.com/img/cart/te/4/commons/sprites-hash-29a8cdc6.png?741290b2);
+      background-position: 0 0;
+    }
+  }
+  .courier-charge-promises-item {
+    .promises-pic {
+      background-image: url(//ccp.vipstatic.com/img/cart/te/4/commons/sprites-hash-29a8cdc6.png?741290b2);
+      background-position: 0 -145px;
+    }
+  }
+}
+.u-yen {
+  padding: 0 2px;
+}
